# drider

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: drider-publisher-internal.h  drider-subscriber-internal.h  drider-topic.h  log-abs.h  main.h  register-handler.h
libdrider/: CMakeLists.txt
libdrider/include/: .gitignore  drider-agent.h  drider-helpers.h  drider-main.h  drider-params.h  drider-publisher.h  drider-subscriber.h  drider-topic.h  drider-types.h  example-message.h  message.h  register-message.h  topics.h  types.h
libdrider/src/: CMakeLists.txt  drider-agent.cpp  drider-main.cpp  drider-publisher.cpp  drider-subscriber.cpp  drider-topic.cpp  message-generator.cpp  register-message.cpp
message-definitions/: Makefile  example-message.idl  message-generator.cpp  register-mesage.idl
src/: CMakeLists.txt  drider-publisher-internal.cpp  drider-subscriber-internal.cpp  drider-topic.cpp  main.cpp  register-handler.cpp
